--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 }
 </script>
 </head>
-<body class="h-screen w-screen overflow-hidden bg-accent">
+<body class="h-[100dvh] w-screen overflow-hidden bg-accent">
     <div id="root" class="h-full w-full"></div>
     <script type="module" src="/index.tsx"></script>
 </body>
